--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
     z-index: -1;
 }
 
-.home__header {
+.home__header-mobile, .home__header-desktop {
     padding: 5px 15px;
     position: sticky;
     top: 0;
@@ -42,6 +42,10 @@
     height: 50px;
     transition: background-color .15s linear;
     z-index: 2;
+}
+
+.home__header-mobile {
+    display: none;
 }
 
 .home__header-nav ul {
@@ -69,16 +73,20 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .home__recommendations {
     position: relative;
     margin: 35px;
+    overflow: hidden;
 }
 
 .home__recommendations-prev-btn {
+    z-index: 1;
+    cursor: pointer;
     position: absolute;
-    top: 40%;
+    bottom: 40%;
     left: 0;
     background-color: white;
     width: 40px;
@@ -91,8 +99,10 @@
 }
 
 .home__recommendations-next-btn {
+    z-index: 1;
+    cursor: pointer;
     position: absolute;
-    top: 40%;
+    bottom: 40%;
     right: 0;
     background-color: white;
     width: 40px;
@@ -107,9 +117,14 @@
 .home__recommendations-wrapper {
     display: flex;
     flex-wrap: nowrap;
-    overflow: hidden;
     gap: 25px;
     margin-left: 10px;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.home__recommendation {
+    display: inline-block;
+    position: relative;
 }
 
 .home__recommendation {
@@ -118,6 +133,7 @@
 
 .home__recommendation-thumbnail {
     border-radius: 5px;
+    position: relative;
     height: 190px;
     width: 190px;
 }
@@ -126,9 +142,19 @@
     font-size: 16px;
 }
 
+.home__recommendation-title:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .home__recommendation-artists {
     font-size: 16px;
     color: #ffffffb3;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .home__recommendation-artists > span {
