adicao de novas secoes

--- a/css/index.css
+++ b/css/index.css
@@ -1,180 +1,4 @@
-.home {
-    margin: 0;
-    height: 2000px;
-    box-sizing: border-box;
-    width: 100%;
-    background-color: black;
-}
-
-.home__background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url("../img/backdrop.png");
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    opacity: .8;
-    z-index: -2;
-}
-
-.home__gradient-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 60%);
-    z-index: -1;
-}
-
-.home__header-mobile, .home__header-desktop {
-    padding: 5px 15px;
-    position: sticky;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 500;
-    height: 50px;
-    transition: background-color .15s linear;
-    z-index: 2;
-}
-
-.home__header-mobile {
-    display: none;
-}
-
-.home__header-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.home__header-nav li {
-    float: left;
-    margin: 0 25px;
-}
-
-.home__header-nav li a {
-    text-decoration: none;
-    color: white;
-    opacity: .5;
-}
-
-.home__header-nav li a:hover {
-    opacity: 1;
-}
-
-.home__user-avatar {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.home__recommendations {
-    position: relative;
-    margin: 35px;
-    overflow: hidden;
-}
-
-.home__recommendations-prev-btn {
-    display: none;
-    z-index: 1;
-    cursor: pointer;
-    position: absolute;
-    bottom: 40%;
-    left: 0;
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    color: black;
-    align-items: center;
-    justify-content: center;
-}
-
-.home__recommendations-next-btn {
-    z-index: 1;
-    cursor: pointer;
-    position: absolute;
-    bottom: 40%;
-    right: 0;
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.home__recommendations-wrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 25px;
-    margin-left: 10px;
-    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.home__recommendation {
-    display: inline-block;
-    position: relative;
-    max-width: 190px;
-}
-
-.home__recommendation-thumbnail {
-    border-radius: 5px;
-    position: relative;
-    height: 190px;
-    width: 190px;
-}
-
-.home__recommendation-thumbnail-wrapper:after {
-    content: ' ';
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 50%);
-    opacity: 0;
-    transition: all .5s;
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.home__recommendation-thumbnail-wrapper:hover:after {
-    opacity: 1;
-}
-
-.home__recommendation-title {
-    font-size: 16px;
-}
-
-.home__recommendation-title:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.home__recommendation-artists {
-    font-size: 16px;
-    color: #ffffffb3;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    text-overflow: ellipsis;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-
-.home__recommendation-artists > span {
-    font-weight: 400;
-}
-
-.home__recommendation-artists > span:not(:last-child):after {
-    content: ', ';
-}
+@import "global.css";
+@import "home.css";
+@import "album.css";
+@import "artist.css";
