--- a/css/album.css
+++ b/css/album.css
@@ -11,6 +11,17 @@
     width: 230px;
 }
 
+@media screen and (max-width: 768px) {
+    .album {
+        max-width: 190px;
+    }
+
+    .album__thumbnail {
+        height: 190px;
+        width: 190px;
+    }
+}
+
 .album__thumbnail-wrapper:after {
     content: ' ';
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 50%);
@@ -19,7 +30,7 @@
     cursor: pointer;
     position: absolute;
     top: 0;
-    bottom: 0;
+    bottom: 70px;
     left: 0;
     right: 0;
 }
