--- a/css/album.css
+++ b/css/album.css
@@ -11,7 +11,7 @@
     width: 230px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .album {
         max-width: 190px;
     }
@@ -19,6 +19,17 @@
     .album__thumbnail {
         height: 190px;
         width: 190px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .album {
+        max-width: 215px;
+    }
+
+    .album__thumbnail {
+        height: 215px;
+        width: 215px;
     }
 }
 
