--- a/css/artist.css
+++ b/css/artist.css
@@ -14,7 +14,7 @@
 }
 
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .artist {
         max-width: 190px;
     }
@@ -22,6 +22,17 @@
     .artist__thumbnail {
         height: 190px;
         width: 190px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .artist {
+        max-width: 215px;
+    }
+
+    .artist__thumbnail {
+        height: 215px;
+        width: 215px;
     }
 }
 
